--- a/example.html
+++ b/example.html
@@ -31,11 +31,11 @@
 
     var gui = new dat.gui.GUI();
 
-    gui.remember(obj);
+    // gui.remember(obj);
 
-    gui.add(obj, 'message');
+    gui.addEx(obj, 'message', '消息');
     gui.add(obj, 'displayOutline');
-    gui.add(obj, 'explode');
+    gui.addEx(obj, 'explode', "测试按钮");
 
     gui.add(obj, 'maxSize').min(-10).max(10).step(0.25);
     gui.add(obj, 'height').step(5); // Increment amount
@@ -51,6 +51,7 @@
     f1.addColor(obj, 'color1');
     f1.addColor(obj, 'color2');
     f1.addColor(obj, 'color3');
+    f1.addEx(obj, 'message', '颜色3');
 
     var f2 = gui.addFolder('Another Folder');
     f2.add(obj, 'noiseStrength');
@@ -62,6 +63,31 @@
       console.log('Button with a long description pressed');
     };
     gui.add(obj, 'Button with a long description');
+
+    var props = {
+      id: { name: 'ID', value: "12342" },
+      start: { name: '开始', value: () => {
+        console.log('clicked start.');
+      }}
+    };
+
+    function Property(value, label, props) {
+      this.name = name;
+      this.value = value;
+      this.label = label;
+      this.props = props;
+    }
+
+    var propsDesc = {
+      名称: 'id',
+      开始: 'start',
+      数量: 323,
+    }
+    
+    let controllers = f2.addAuto(propsDesc);
+    console.log(controllers);
+    controllers.数量.listen();
+    propsDesc.数量 = 300;
 
   </script>
 </body>
